--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <a class="logo" href="#"><span>Web</span>Studio</a>
             <ul class="navig">
-                <li class="point"><a href="#">Студия</a></li>
+                <li class="point curent"><a href="#">Студия</a></li>
                 <li class="point"><a href="portfolio.html">Портфолио</a></li>
                 <li class="point"><a href="#">Контакти</a></li>
             </ul>
