--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <a class="logo" href="#"><span>Web</span>Studio</a>
         <address>
             <ul class="contacts">
-                <li><a href="https://goo.gl/maps/CtRzZJ98MdzmSZpEA" target="_blank" rel="noopener nofollow noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li class="locatoin"><a href="https://goo.gl/maps/CtRzZJ98MdzmSZpEA" target="_blank" rel="noopener nofollow noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
