--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
             <a class="logo" href="#"><span>Web</span>Studio</a>
             <ul class="navig">
                 <li class="point"><a href="index.html">Студия</a></li>
-                <li class="point"><a href="#">Портфолио</a></li>
+                <li class="point curent"><a href="#">Портфолио</a></li>
                 <li class="point"><a href="#">Контакти</a></li>
             </ul>
         </nav>
@@ -53,8 +53,6 @@
                     <h3>Ресторан Seafood</h3>
                     <p>Приложение</p>
                 </li>
-            </ul>
-            <ul class="item">
                 <li class = "item-elem">
                     <img src="image/port-img4.jpg" width="370" alt="иллюстрация выполненой работы" />
                     <h3>Проект Prime</h3>
@@ -70,8 +68,6 @@
                     <h3>Inspiration has no Borders</h3>
                     <p>Веб-сайт</p>
                 </li>
-            </ul>
-            <ul class="item">
                 <li class = "item-elem">
                     <img src="image/port-img7.jpg" width="370" alt="иллюстрация выполненой работы" />
                     <h3>Издание Limited Edition</h3>
@@ -94,7 +90,7 @@
         <a class="logo" href="#"><span>Web</span>Studio</a>
         <address>
             <ul class="contacts">
-                <li><a href="https://goo.gl/maps/CtRzZJ98MdzmSZpEA" target="_blank"
+                <li class="locatoin"><a href="https://goo.gl/maps/CtRzZJ98MdzmSZpEA" target="_blank"
                         rel="noopener nofollow noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
